Add enriched tv-show detail response and tests on v1
